--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,7 +6,7 @@ body {
 }
 
 .homepage {
-  background-color: rgb(248, 116, 248);
+  background: rgb(243, 145, 84);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,7 +47,6 @@ body {
 }
 
 .menu {
-  background-color: #9d9595;
   padding: 1rem;
   border-radius: 10px;
   display: flex;
@@ -57,6 +56,17 @@ body {
   height: 150px;
   text-align: center;
   gap: 1rem;
+  color: purple;
+}
+
+.menuLink {
+  color: purple;
+  text-decoration: none;
+}
+
+.menuLink:hover {
+  text-decoration: underline;
+  color: white;
 }
 
 .gesture {
@@ -81,6 +91,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 0;
+  color: black;
 }
 
 .safetyGestureImage {
